--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -13,6 +13,8 @@ jobs:
   update:
     runs-on: ubuntu-latest
     timeout-minutes: 5
+    permissions:
+      contents: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -29,11 +31,12 @@ jobs:
 
       - name: Upload changes
         run: |
-          git config --local user.email "actions@github.com"
-          git config --local user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          git config --global user.name "GitHub Actions"
           
           cd $GITHUB_WORKSPACE/.builds
+          git add .
           if [[ `git status --porcelain` ]]; then
-            git commit -m "Update $(date)"
+            git commit -m "$(date)"
             git push
           fi
