--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -7,7 +7,10 @@ concurrency:
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 20 * * *' # 1 PM PDT (Mar - Nov)
+    - cron: "0 20 * * *" # 1 PM PDT (Mar - Nov)
+  push:
+    branches: [ "master" ]
+    paths: [ "repositories" ]
 
 jobs:
   update:
@@ -18,6 +21,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          ref: master
 
       - name: Checkout builds
         uses: actions/checkout@v4
